# mobslim

./: README.md  demo.ipynb  pyproject.toml  run.py  run_equil.py  run_grid.py  run_linear.py
demos/: grid_demo.ipynb
demos/.ipynb_checkpoints/: equil_demo-checkpoint.ipynb
mobslim/: agents.py  expected.py  listener.py  network.py  optimizer.py  planner.py  processs_events.py  router.py  sim.py
mobslim/planners/: greedy_trip_planner.py  noop.py
mobslim/planners/rerouters/: core.py  simple_rerouter.py
scenarios/equil/: plans100.xml
src/mobslim/: agents.py  animate.py  expected.py  main.py  network.py  optimizer.py  processs_events.py  sim.py
src/mobslim/planners/: core.py  greedy_trip_planner.py  noop.py
src/mobslim/planners/rerouters/: core.py  simple_rerouter.py
tests/: test_demo.py
